1주차/project_ws/log/build_2024-11-06_09-20-34/turtlebot/stderr.log
  File "/home/bok/project_ws/install/turtlebot/lib/python3.10/site-packages/turtlebot/menu_gui.py", line 30
    tk.Label(self.root, text="1번 테이블", font=("Arial",5).grid(row=0, column=0)
            ^
SyntaxError: '(' was never closed

